css/main.css
body{
    margin: 0px;
    padding: 0px;
    font-family: 'Google Sans', 'Segoe UI', 'Ubuntu', 'Helvetica Neue', sans-serif;
}

header{
    background-color: #2196F3;
    height: 56px;
    position: -webkit-sticky;
    position: sticky;
    top: 0px;
    left: 0px;
    right: 0px;
    padding: 16px;
}

#Title{
    box-sizing: border-box;
    float: left;
    color: #FFFFFF;
    font-weight: 500;
    font-size: 20px;
}

.ButtonBar li{
    list-style-type: none;
    box-sizing: border-box;
    margin: 0px 8px;
}
                    
#Actions li{
    float: right;
}

#Actions a{
    transition-property: color, border, background-color;
    transition-duration: 200ms;
    transition-timing-function: ease-out;
    border-style: solid;
    border-width: 2px;
    border-radius: 8px;
}

#Actions a:link, a:visited{
    text-decoration: none;
    font-weight: 500;
    border-color: #00000000; /*transparent*/
    color: #000000;
    padding: 8px;
    outline: none;
}

#Actions a:hover{
    border-color: #64B5F6;
    color: #FFFFFF;
}

#Actions a:active{
    border-style: groove;
    border-color: #0D47A1;
    color: #000000;
    background-color: #64B5F6;
    outline: none;
}

#Avatar, #Avatar:visited{
    transition-property: box-shadow;
    transition-duration: 200ms;
    transition-timing-function: ease-out;
    border-style: none;
    border-radius: 48px;
    float: right;
    height: 48px;
    width: 48px;
    margin: 0px 8px;
    padding: 8px;
    outline: 0 !important;
    text-align: center;
    font-size: 24px;
    background-color: #FFFFFF;
}

#Avatar:hover{
    box-shadow: 0px 2px 15px 2px #444444;
}

#Avatar:active{
    box-shadow: none;
}

#Avatar:focus{
    outline: none;
}

#Avatar::-moz-focus-inner {
    border: 0;
}

main{
    clear: both;
    padding: 8px;
}

.Section{
    display: flex;
    align-items: flex-start;
    flex-direction: row;
    padding: 16px 0px;
}

.Section .Heading{
    font-size: 48px;
    font-weight: 400;
    display: block;
    text-align: center;
    margin: 0 auto;
    flex-shrink: 0;
    color: #0000008A;
}

.Section .Content{
    margin: 0 auto;
    display: block;
    box-sizing: border-box;
    padding: 0px 8px;
}

.Section .Content-Text{
    font-size: 24px;
    margin: 0px 0px 24px 0px;
}

@media screen and (max-width: 1024px) {
    .Section{
        flex-direction: column;
    }
    
    .Section .Content-Text{
        margin: 24px 0px;
    }
}

footer{
    text-align: center;
    background-color: #2196F3;
    font-size: 12px;
    color: #FFFFFF;
    padding: 16px 8px;
}

#WIP{
    font-style: oblique;
}

